# rekuest-server-next

./: .copilot.md  .dockerignore  .gitignore  CHANGELOG.md  CONFIG.md  DEAD_CODE_REVIEW.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  RELEASING.md  _debug.py  config.yaml  docker-compose.yaml  kante  manage.py  model.py  pyproject.toml  run-debug.sh  run.sh  test.py  test_settings.py  test_syntax.py  test_webhook_manual.py  verify_filters.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: coverage.yaml  docker-build.yaml  docker-dev.yaml  docker-next.yaml  lint.yaml  pages.yaml  release.yaml  tests.yaml  typecheck.yaml
datalayer/: admin.py  apps.py  base_models.py  datalayer.py  extension.py  fields.py  inputs.py  models.py  scalars.py  types.py
datalayer/migrations/: 0001_initial.py  0002_alter_bigfilestore_options_and_more.py  0002_zarrstore.py  0003_alter_bigfilestore_options_and_more.py  0003_datalayerstore_upload_metadata.py  0004_alter_datalayerstore_bucket_alter_datalayerstore_key_and_more.py  0005_alter_datalayerstore_path.py  0006_parquetstore_alter_bigfilestore_options_and_more.py  0007_zarrstore_chunks_zarrstore_shape_zarrstore_version_and_more.py  0008_zarrstore_additional_metadata_fields.py  0009_zarrstore_storage_transformers.py  0010_zarrstore_dtype.py  0011_alter_datalayerstore_path.py  0012_alter_datalayerstore_path.py  0013_alter_datalayerstore_path.py  0014_alter_datalayerstore_path.py  0015_alter_datalayerstore_path.py  0016_alter_datalayerstore_path.py  0017_alter_datalayerstore_path.py  0018_alter_datalayerstore_path.py  0019_alter_datalayerstore_path.py  0020_alter_datalayerstore_path.py  0021_alter_datalayerstore_path.py  0022_alter_datalayerstore_path.py  0023_alter_datalayerstore_path.py  0024_alter_datalayerstore_path.py  0025_alter_datalayerstore_path.py  0026_alter_datalayerstore_path.py  0027_alter_datalayerstore_path.py  0028_alter_datalayerstore_path.py  0029_alter_datalayerstore_path.py  0030_alter_datalayerstore_path.py  0031_alter_datalayerstore_path.py  0032_alter_datalayerstore_path.py
datalayer/mutations/: __init__.py  bigfile.py  media.py  parquet.py  zarr.py
dep_graph/: functions.py  models.py  types.py
docs/: API_DOCUMENTATION.md  DEVELOPMENT.md  hook-agents.md
docs/design/: README.md  action-matching.md  agent-protocol.md  assignation-lifecycle.md  caller-protocol.md  domain-model.md  higher-order.md  identity.md  provenance.md  realtime.md  task-lifecycle.md
examples/: README.md  example_hook_agent.py  setup_hook_agent.py  webhook_agent_example.py
facade/: HOOK_AGENTS_README.md  admin.py  apps.py  backend.py  base_models.py  caller_context.py  caller_events.py  capabilities.py  channel_events.py  channel_models.py  channels.py  codes.py  connection.py  creation.py  descriptors.py  enums.py  filters.py  filters.py.bak  filters_migrated.py  filters_new.py  grace.py  higher_order.py  hook_agent_service.py  hooks.py  http_intake.py  inputs.py  liveness.py  loaders.py  logic.py  managers.py  message_router.py  messages.py  models.py  persist_backend.py  ports.py  protocol.py  reaper.py  scalars.py  schema.py  signals.py  (+9 more)
facade/consumers/: agent.py  agent_json.py  agent_protocol.py  agent_queue.py  async_consumer.py  carrots.py  helpers.py  messages.py
facade/enums/: __init__.py  action.py  agent.py  assignation.py  dashboard.py  log.py  reservation.py  state.py  task.py
facade/filters/: __init__.py  action.py  agent.py  assignation.py  auth.py  blok.py  common.py  dashboard.py  dependency.py  implementation.py  reservation.py  session.py  shelve.py  structure.py  task.py  testcase.py  threed.py  toolbox.py
facade/infererence/: is_agent.py  is_hook.py  is_predicate.py
facade/inputs/: __init__.py  agent.py  assignation.py  blok.py  dashboard.py  dependency.py  implementation.py  state.py  task.py  threed.py  toolbox.py
facade/migrations/: 0001_initial.py  0002_agent_app.py  0002_alter_dependency_binds_alter_dependency_reference.py  0002_argport_dimension_returnport_dimension.py  0002_dependency_description.py  0002_patch_interface.py  0002_provision_waiter_reservation_and_more.py  0002_remove_dashboard_panels_blok_materializedblok_and_more.py  0002_rename_state_hash_stateschema_hash.py  0002_rename_status_assignation_latest_event_kind_and_more.py  0002_session_session_id.py  0002_shelveditem.py  0002_shortcut_bind_number.py  0003_agent_hook_url_agent_hook_url_secret_agent_kind.py  0003_agent_organization.py  0003_agent_pinned_by_node_pinned_by_template_pinned_by.py  0003_alter_materializedblok_blok.py  0003_assignation_dependencies.py  0003_assignation_is_done.py  0003_assignation_testcase_testresult_assignationevent.py  0003_filedrawer_filesystemshelve_memorydrawer_and_more.py  0003_remove_argport_facade_argp_identif_b280d7_idx_and_more.py  0003_rename_minimal_viable_instances_dependency_min_viable_instances_and_more.py  0003_structure_stateschema_state_dashboard_and_more.py  0004_agent_user.py  0004_alter_assignationevent_message.py  0004_alter_dependency_max_viable_instances_and_more.py  0004_assignation_statusmessage_and_more.py  0004_remove_inputinterfaceusage_action_and_more.py  0004_remove_memoryshelve_resource_id_and_more.py  0004_toolbox_client.py  (+112 more)
kante/: channel.py  cors.py
reaktion/: admin.py  apps.py  channels.py  enums.py  filters.py  hashers.py  inputs.py  models.py  scalars.py  types.py
rekuest/: asgi.py  basepath.py  configuration.py  settings.py  settings_test.py  urls.py  wsgi.py
rekuest_core/: constants.py  enums.py  scalars.py  units.py
rekuest_ui_core/: constants.py  enums.py  hash.py  scalars.py
tests/: conftest.py  factories.py  graphql_ops.py  test_agent_consumer.py  test_config.py  test_descriptors.py  test_ensure_agent.py  test_grace.py  test_graphql_mutations.py  test_graphql_queries.py  test_integration.py  test_models.py  test_print_schema.py  test_provenance.py  test_provenance_dispatch.py  test_replay_primitive.py  test_webhook_agent.py  test_webhook_integration.py
type_schemas/: rekuest_v1.graphql
(+165 files in other folders)
