[project]
name = "rekuest-server"
version = "0.1.0"
description = "High-performance Rekuest server"
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "django>=6.0.3", # Updated to latest stable for performance and security
    "omegaconf>=2.3.0,<3",
    "psycopg[binary]>=3.3.3", # Updated to match your lock
    "daphne>=4.2.1,<5", # Better ASGI handling
    "channels-redis>=4.3.0,<5",
    "django-choices-field>=2.3.0,<3",
    "authentikate>=1.0.1",
    "ujson>=5.12.0,<6", # Faster JSON parsing
    "aioredis>=2.0.1,<3",
    "jsonpatch~=1.33",
    "django-probes>=1.8.0,<2",
    "rich>=14.3.3",
    "django-health-check>=4.2.1",
    "kante>=1.1.1",
    "django-polymorphic>=4.11.2",
    "boto3>=1.42.73",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.1",
    "dokker>=2.3.0",
    "moto>=5.1.22",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
]


[tool.django-stubs]
django_settings_module = "rekuest.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rekuest.settings_test"

[tool.ruff]
line-length = 300
target-version = "py312"

[tool.ruff.lint]
# Updated Ruff config format (new versions of Ruff prefer tool.ruff.lint)
extend-select = ["ANN", "D1", "I"] # Added 'I' for import sorting (speedup)
extend-ignore = ["ANN002", "ANN003", "D100", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["rekuest"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = true
branch = "main"
build_command = "uv build"
