[project]
name = "rekuest-server"
version = "1.0.0-rc.1"
description = "High-performance Rekuest server"
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "django>=6.0.3", # Updated to latest stable for performance and security
    "pydantic-settings[yaml]>=2.2",
    "psycopg[binary]>=3.3.3", # Updated to match your lock
    "daphne>=4.2.1,<5", # Better ASGI handling
    "channels-redis>=4.3.0,<5",
    "django-choices-field>=2.3.0,<3",
    "authentikate>=2.1.2",
    "ujson>=5.12.0,<6", # Faster JSON parsing
    "aioredis>=2.0.1,<3",
    "jsonpatch~=1.33",
    "django-probes>=1.8.0,<2",
    "rich>=14.3.3",
    "django-health-check>=4.2.1",
    "kante>=2.0.1",
    "django-polymorphic>=4.11.2",
    "boto3>=1.42.73",
    "jsonschema>=4.26.0",
    "dokker>=2.5",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "django-stubs>=6.0.1",
    "dokker>=2.5",
    "moto>=5.1.22",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "python-semantic-release>=9.21.0",
]


[tool.django-stubs]
django_settings_module = "rekuest.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rekuest.settings_test"

[tool.ruff]
line-length = 300
target-version = "py312"

[tool.ruff.lint]
# Updated Ruff config format (new versions of Ruff prefer tool.ruff.lint)
extend-select = ["ANN", "D1", "I"] # Added 'I' for import sorting (speedup)
extend-ignore = ["ANN002", "ANN003", "D100", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["rekuest"]

# Type gate for the refactored real-time / protocol plumbing. Run: `basedpyright`.
# Scoped to the typed plumbing modules; the ORM/pydantic dynamic-inference rules are relaxed
# (pyright can't see Django's descriptor/manager magic or pydantic defaults without a mypy
# plugin), so the gate enforces the things that matter here — untyped params, wrong types,
# bad calls, unreachable code — without drowning in Django false positives.
[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = [
    "facade/ports.py",
    "facade/transport.py",
    "facade/message_router.py",
    "facade/grace.py",
    "facade/capabilities.py",
    "facade/caller_context.py",
    "facade/caller_events.py",
    "facade/hooks.py",
    "facade/consumers/agent_protocol.py",
]
exclude = ["**/migrations", "**/__pycache__", ".venv", "tests"]
# Django models / pydantic models defeat structural inference without a plugin.
reportAttributeAccessIssue = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false
reportUnusedCallResult = false
reportMissingTypeStubs = false

[tool.semantic_release]
# rekuest-server is deployed as Docker images, not a PyPI package — so a release
# just bumps the version, writes the changelog, tags, and cuts a GitHub Release.
# No wheel is built and nothing is uploaded to PyPI.
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = false
build_command = ""
commit_message = "chore(release): v{version} [skip ci]"

# main -> stable X.Y.Z releases. next -> prereleases X.Y.Z-rc.N.
[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.next]
match = "next"
prerelease = true
prerelease_token = "rc"

# Maintenance branches (1.x, 2.x, ...) cut stable patch/minor releases for an
# older major after a new major has shipped from main — e.g. 1.5.3 off `1.x`
# while main is on 2.x. The regex is reused for every future major's line.
[tool.semantic_release.branches.maintenance]
match = '^\d+\.x$'
prerelease = false
